# reconcile

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  examples.yaml
examples/: data.py  grouped_timeseries_reconciliation.py  reconciliation.py
reconcile/: __init__.py  conftest.py  data.py  forecast.py  grouped_timeseries.py  grouping.py  grouping_test.py  probabilistic_reconciliation.py  reconcile.py  reconciliation_test.py
tests/: conftest.py  test_grouping.py  test_reconciliation.py
