[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probabilistic-reconciliation"
description = "Probabilistic reconciliation of time series forecasts"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/dirmeier/reconcile"
keywords = ["probabilistic reconciliation", "forecasting", "timeseries", "hierarchical time series"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "blackjax-nightly>=0.9.6.post127",
    "distrax>=0.1.2",
    "chex>=0.1.5",
    "jaxlib>=0.4.18",
    "jax>=0.4.18",
    "flax>=0.7.3",
    "gpjax>=0.6.9",
    "optax>=0.1.3",
    "pandas>=1.5.1"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/dirmeier/reconcile"

[tool.hatch.build.targets.wheel]
packages = ["reconcile"]

[tool.hatch.version]
path = "reconcile/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "./gitignore",
    "/.pre-commit-config.yaml"
]

[tool.hatch.envs.test]
dependencies = [
    "pylint>=2.15.10",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "gpjax>=0.5.0",
    "statsmodels>=0.13.2"
]

[tool.hatch.envs.test.scripts]
lint = 'ruff check reconcile examples'
test = 'pytest -v --doctest-modules --cov=./reconcile --cov-report=xml reconcile'

[tool.hatch.envs.examples]
dependencies = [
    "gpjax>=0.5.0",
    "statsmodels>=0.13.2"
]

[tool.hatch.envs.examples.scripts]
reconciliation = 'python examples/reconciliation.py'

[tool.bandit]
skips = ["B101"]

[tool.ruff]
fix = true
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["UP",  "I", "PL", "S"]
ignore =["S101", "PLR2004", "PLR0913", "E2"]

[tool.ruff.lint.pydocstyle]
convention= 'google'
