[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic-reconciliation"
description = "Probabilistic reconciliation of time series forecasts"
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["probabilistic reconciliation", "forecasting", "timeseries", "hierarchical time series"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "blackjax-nightly>=0.9.6.post127",
    "distrax>=0.1.2",
    "chex>=0.1.5",
    "jaxlib>=0.4.30",
    "jax>=0.4.30",
    "flax>=0.7.3",
    "gpjax>=0.6.9",
    "optax>=0.1.4",
    "pandas>=1.5.1",
    "tfp-nightly>=0.26.0.dev20250821",
    "einops>=0.8.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dirmeier/reconcile"

[project.optional-dependencies]
all = []

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "gpjax>=0.5.0",
    "statsmodels>=0.13.2"
]
examples = [
  "gpjax>=0.5.0",
  "ramsey==0.2.1",
  "statsmodels>=0.13.2",
]

[tool.setuptools]
packages = ["reconcile"]

[tool.setuptools.dynamic]
version = {attr = "reconcile.__init__.__version__"}

[tool.bandit]
skips = ["B101", "B310"]

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --cov=./reconcile --cov-report=xml"
testpaths = [
    "reconcile"
]

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.lint]
select = ["D", "E", "F", "W", "I001"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S101", "ANN101", "PLR2044", "PLR0913", "PLR2004"]
exclude = ["*_test.py", "docs/**", "examples/**"]


[tool.ruff.lint.pydocstyle]
convention= 'google'

